# Supabase-MCP-SelfHosted

./: .dockerignore  .gitignore  .railway-rebuild  .smithery-test.json  .smithery.json  AMELIORATIONS_MCP_SUPABASE.md  AUTO_COMMIT_CONFIG.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_RAILWAY_FINAL.md  Dockerfile  Dockerfile.apify  Dockerfile.old  Dockerfile.simple  Dockerfile.smithery  Dockerfile.ultra  FORCE_REDEPLOY_FASTMCP.md  MISSION_ACCOMPLIE_FINAL.md  PUBLICATION_GUIDE.md  README.md  RELEASE_NOTES.md  RESUME_FINAL_RAILWAY_PROBLEME.md  SELFHOSTING.md  SELF_HOSTED_GUIDE.md  SMITHERY_AUTO_PUSH.md  SMITHERY_README.md  SSL_FIX_GUIDE.md  TEST_FASTMCP_FINAL.md  TEST_FASTMCP_NO_ERROR.md  apify.json  auto-smithery-complete.js  auto-smithery-simple.js  auto-smithery-test.js  auto-smithery.js  healthcheck_server.py  hybrid_server.py  index-smithery.ts  main.py  mcp_enhanced_usage_examples.md  mcp_hub.py  mcp_servers_config.json  (+29 more)
.actor/: actor.json  input_schema.json
.claude/: settings.local.json
.smithery/: test.json
scripts/: auto-commit-watcher.js  auto-deploy-complete.sh  check-dns-config.sh  clean-redeploy-railway.sh  cleanup-secrets.sh  configure-hybrid.sh  demo-automation.sh  deploy-guide.sh  deploy-selfhosted.sh  diagnose-mcp-server.sh  diagnose-smithery-advanced.sh  diagnose-smithery-scan.sh  final-railway-diagnosis.sh  fix-railway-domain.sh  fix-railway-healthcheck.sh  fix-ssl-certificate.sh  install-smithery.sh  monitor-changes.sh  post-commit.sh  publish-to-smithery.sh  push-to-smithery.sh  railway-env-config.sh  setup-letsencrypt.sh  setup-railway.sh  test-automation.sh  (+11 more)
(+96 files in other folders)
