[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supabase-mcp-oauth2"
version = "3.1.0"
description = "Enhanced Edition v3.1 - 54+ MCP tools for 100% autonomous Supabase management with OAuth2 support"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.0",
    "smithery>=0.1.23",
    "pydantic>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]