[project]
name = "supabase-mcp-server"
version = "3.1.0"
description = "Enhanced Edition v3.1 - 54+ MCP tools for 100% autonomous Supabase management"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.13.0",
    "smithery>=0.1.23",
    "pydantic>=2.0.0"
]

[tool.smithery]
server = "mcp_hub:create_server"
