[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-mcp-forge-1.6.4"
version = "1.0.0"
description = "Minecraft MCP Server for Forge 1.6.4 - GUI analysis and Java code generation"
authors = [
    {name = "coupaul", email = "support@mcp.coupaul.fr"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "smithery>=0.1.23",
    "pydantic>=2.0.0"
]

[tool.smithery]
server = "server.src.index:create_server"